# stm32_cmake

./: .cproject  .mxproject  .project  CMakeLists.txt  CMakeLists_template.txt  README.md  main.cpp  stm32_cmake.ioc
Core/Inc/: main.h  usart.h
Core/Src/: can.c  gpio.c  main.c  tim.c  usart.c
Drivers/STM32F4xx_HAL_Driver/Inc/: stm32f4xx_ll_gpio.h
Drivers/STM32F4xx_HAL_Driver/Src/: stm32f4xx_hal_gpio.c
User/: CMakeLists.txt  mainpp.cpp
dynamic_lib/: dynamic_lib.cpp
src/: CMakeLists.txt  main.cpp
src/dynamic_lib/: CMakeLists.txt  dynamic_lib.h
src/static_lib/: CMakeLists.txt
static_lib/: static_lib.cpp  static_lib.h
